--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
+bertopic>=0.16.0
+sentence-transformers>=2.2.2
+scikit-learn>=1.3.0
+umap-learn>=0.5.5
+hdbscan>=0.8.33
+numpy>=1.24.0
+pandas>=1.5.0
 PyQt5>=5.15.0
 cryptography>=3.4.0
 google-generativeai>=0.7.0
-requests>=2.25.0
-beautifulsoup4>=4.9.0
+requests>=2.31.0
+beautifulsoup4>=4.12.0
